# nexus

./: .dockerignore  .env.example.new  .env.example.old  .gitignore  BANNER.txt  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DELIVERY.md  DEPLOYMENT_SUMMARY.txt  GETTING_STARTED.md  QUICKSTART.md  QUICK_START.md  README.md  REMOTE_SETUP.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  start_nexus_remote.sh  stop_nexus.sh
.github/: DISCUSSIONS_WELCOME.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: nexus-backend.service  nexus-beat.service  nexus-worker.service
config/prometheus/: prometheus.yml
docs/: BADGES.md  COMPARISON.md  DOCUMENTATION_TESTING_CHECKLIST.md  ENHANCEMENT_SUMMARY.md  FAQ.md  OPERATIONS.md  SHORT_TERM_ROADMAP.md  UX_AUDIT_REPORT.md  architecture-diagram.html
migrations/: env.py
migrations/versions/: 20260710_1227_ae25db256ba2_initial_schema.py  20260711_0620_8d2ed53c09c5_add_refresh_sessions_table.py  20260711_0628_9e2e664abfd3_add_llm_usage_table.py  20260711_0854_e0a9ce23bdcf_add_portfolio_holdings_net_worth_.py  20260711_0934_e7ac60326872_add_notifications_and_preferences.py  20260711_1147_179eadb84c99_add_vendor_aliases_table.py  20260711_1933_0fcf49748e2d_add_sms_phone_to_users_table.py
scripts/: backup.sh  init-db.sql  setup.sh  test-restore.sh
src/nexus/: __init__.py  config.py  database.py
src/nexus/api/: main.py  ws_manager.py
src/nexus/api/routers/: audit.py  auth.py  finance.py  notifications.py  portfolio.py  research.py  sms.py  tasks.py  voice.py  ws.py
src/nexus/cli/: main.py
src/nexus/models/: __init__.py  automation.py  base.py  finance.py  llm_usage.py  notification.py  portfolio.py  research.py  session.py  task.py  user.py
src/nexus/services/: __init__.py  audit.py  embeddings.py  forecasting.py  market.py  notifications.py  portfolio.py  research.py  scheduling.py  sessions.py  sms.py  voice.py
src/nexus/utils/: arxiv_api.py  categorizer.py  client.py  credibility.py  dates.py  dependencies.py  metrics.py  ocr.py  ratelimit.py  recurrence.py  resilience.py  security.py  storage.py  vendors.py  versioning.py  wikilinks.py
src/nexus/workers/: __init__.py  app.py  tasks.py
tests/: conftest.py  test_api.py  test_audit.py  test_categorizer_accuracy.py  test_forecasting.py  test_market.py  test_mfa.py  test_models.py  test_notifications.py  test_ocr.py  test_portfolio.py  test_recurrence.py  test_research.py  test_research_workflows.py  test_scheduling.py  test_sessions.py  test_sms.py  test_storage.py  test_synthesis.py  test_vendor_normalization.py  test_versioning.py  test_voice.py  test_workers.py
web/: next.config.ts  package-lock.json  package.json
web/public/: manifest.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/finance/: page.tsx
web/src/app/login/: page.tsx
web/src/app/notes/: page.tsx
web/src/app/notifications/: page.tsx
web/src/app/portfolio/: page.tsx
web/src/app/register/: page.tsx
web/src/app/voice/: page.tsx
web/src/components/: mobile-nav.tsx
web/src/lib/: api.ts  auth-context.tsx  use-websocket.ts
